--- a/kubejs/assets/cookies/lang/zh_cn.json
+++ b/kubejs/assets/cookies/lang/zh_cn.json
@@ -1,10 +1,12 @@
 {
-	"key.categories.cookies++":"曲奇++",
-	"block.cookies.cookie_block1": "曲奇方块",
-	"block.cookies.cookie_block2": "曲奇方块",
-	"block.cookies.cookie_block3": "曲奇方块",
-	"block.cookies.cookie_block4": "曲奇方块",
-	"block.cookies.cookie_block5": "曲奇方块",
-	"block.cookies.cookie_block6": "曲奇方块",
-	"block.cookies.cookie_block7": "曲奇方块"
+    "key.categories.cookies++": "曲奇++",
+    "item.cookies.cookie_update1": "一级曲奇升级",
+    "block.cookies.cookie_block1": "曲奇方块",
+    "block.cookies.cookie_block1_update1": "曲奇方块",
+    "block.cookies.cookie_block2": "曲奇方块",
+    "block.cookies.cookie_block3": "曲奇方块",
+    "block.cookies.cookie_block4": "曲奇方块",
+    "block.cookies.cookie_block5": "曲奇方块",
+    "block.cookies.cookie_block6": "曲奇方块",
+    "block.cookies.cookie_block7": "曲奇方块"
 }
